<resources>
    <string name="app_name">Inter Story App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="welcome_login">Welcome back! Please input your email and password to continue.</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="welcome_register">Please input your name, email, and password to register.</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="char_length">Password must be more than 6 characters</string>
    <string name="email_error">Please input a correct email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="first_char">First Char</string>
    <string name="circle">Circle</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="stories">Stories</string>
    <string name="language">Language</string>
    <string name="first_user_char">W</string>
    <string name="description">Description</string>
    <string name="date">2022–08–22</string>
    <string name="add_story">Add Story</string>
    <string name="back">back</string>
    <string name="placeholder">placeholder</string>
    <string name="camera">camera</string>
    <string name="submit">submit</string>
    <string name="add_image_first">Please add image first.</string>
    <string name="fill_description">Please fill the description form</string>
    <string name="net_failed">Network failed</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="not_permitted">Not permitted.</string>
    <string name="capture">capture</string>
    <string name="switch_camera">switch camera</string>
    <string name="press_back_again">Press back again to exit.</string>
</resources>