<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.stories.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tv_add_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_story"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textColor="?attr/colorOnPrimary"/>

        <ImageView
            android:id="@+id/img_placeholder"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_story"
            android:contentDescription="@string/placeholder" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="@+id/img_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/img_placeholder" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/menu_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="@+id/img_placeholder"
            app:layout_constraintTop_toTopOf="@+id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="32dp"
            app:endIconTint="?attr/colorOnPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="3"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/submit"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>