<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="428dp"
    android:background="?attr/colorSecondary"
    android:paddingVertical="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_account"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:src="?attr/colorPrimary"
        app:civ_border_color="?attr/colorOnPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/img_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_user_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_user_char"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/img_account"
        app:layout_constraintEnd_toEndOf="@id/img_account"
        app:layout_constraintStart_toStartOf="@id/img_account"
        app:layout_constraintTop_toTopOf="@id/img_account" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_account"
        app:layout_constraintStart_toEndOf="@id/img_account"
        app:layout_constraintTop_toTopOf="@id/img_account" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/stories"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/img_account"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_story" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:maxLines="1"
        android:text="@string/description"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toEndOf="@id/tv_username"
        app:layout_constraintTop_toTopOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

</androidx.constraintlayout.widget.ConstraintLayout>