<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.stories.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/stories"
                android:scaleType="centerCrop"
                android:transitionName="@string/stories"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:src="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-20dp"
                app:cardBackgroundColor="?attr/colorSecondary"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/img_detail" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-20dp"
                android:elevation="1dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                tools:layout_editor_absoluteX="-2dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btn_bar_logout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:src="?attr/colorPrimary"
                    app:civ_border_color="?attr/colorOnPrimary"
                    app:civ_border_width="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_first_user_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_user_char"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="22sp"
                    android:transitionName="@string/first_char"
                    app:layout_constraintBottom_toBottomOf="@id/btn_bar_logout"
                    app:layout_constraintEnd_toEndOf="@id/btn_bar_logout"
                    app:layout_constraintStart_toStartOf="@id/btn_bar_logout"
                    app:layout_constraintTop_toTopOf="@id/btn_bar_logout" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/btn_bar_logout"
                    app:layout_constraintStart_toEndOf="@id/btn_bar_logout"
                    app:layout_constraintTop_toTopOf="@id/btn_bar_logout" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/description"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:transitionName="@string/description"
                    app:layout_constraintStart_toStartOf="@id/btn_bar_logout"
                    app:layout_constraintTop_toBottomOf="@id/btn_bar_logout" />

                <TextView
                    android:id="@+id/tv_created_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/date"
                    android:textColor="@color/grey"
                    android:transitionName="@string/date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="?attr/colorOnPrimary" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>